added tests, docs, started docker

--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -1,10 +1,10 @@
 spring:
-  profiles:
-    active: local
 
   datasource:
     username: ${DB_USERNAME}
     password: ${DB_PASSWORD}
+    url:
+
   jpa:
     properties:
       hibernate:
@@ -28,3 +28,4 @@ springdoc:
 server:
   servlet:
     context-path: /
+  port: ${SERVER_PORT}
